--- a/deploy/index.html
+++ b/deploy/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Cafe Manager </title>
-
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+      />
 <link rel="shortcut icon" href="/logo.jpg"></head>
 
 <body>
